# garden-store

./: .env.production  .gitignore  .pre-commit-config.yaml  CATALOG_FEATURES.md  DEPLOY.md  Makefile  PRE-COMMIT.md  admin-refactoring-plan.md  alembic.ini  docker-compose.yml  fix_create_order.sql  package-lock.json  package.json  refactored2.md
back/: .dockerignore  .env  API_GENERATION.md  Dockerfile  Dockerfile.alternative  Makefile  add_admin.py  docker-compose.yml  entrypoint.sh  generate_all.py  generate_client.py  generate_modern_client.py  generate_openapi.py  main.py  openapi.json  pyproject.toml  requirements.txt  test_chat_api.py
back/alembic/: env.py
back/alembic/versions/: 31ff11143f63_add_chat_and_chat_messages_tables.py  8222a18e9d7f_add_email_and_hashed_password_to_.py  e414e6ff0bfd_add_notifications_table.py
back/app/: auth.py  env_setup.py  schemas.py  websocket_manager.py
back/app/db/: database.py  models.py  seeds.py
back/app/routers/: admin.py  auth.py  cart.py  categories.py  chat.py  favorites.py  notifications.py  orders.py  products.py
back/app/routers/admin/: __init__.py  categories.py  orders.py  products.py  users.py
back/scripts/: check-all.sh  format.sh  lint.sh  type-check.sh
back/tests/: test_admin.py  test_auth.py  test_cart.py  test_cart_extended.py  test_categories.py  test_favorites.py  test_orders.py  test_orders_extended.py  test_products.py
back/todo/: auth.md  postgres-seeds.md
front/: .dockerignore  .env  Dockerfile  REFACTORING_COMPLETED.md  REFACTORING_FINAL_STATUS.md  components.json  eslint.config.mjs  fix_create_order.sql  next.config.ts  orval.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  update_create_order_function.sql
front/prisma/: schema.prisma  seed.ts
front/prisma/migrations/: manual_create_orders.sql
front/prisma/migrations/20250617183328_init/: migration.sql
front/prisma/migrations/20250617205721_rename_tables_to_lowercase/: migration.sql
front/prisma/migrations/20250618085820_peppa2/: migration.sql
front/src/: middleware.ts
front/src/app/: layout.tsx  page.tsx
front/src/app/(auth)/: layout.tsx
front/src/app/about/: page.tsx
front/src/app/admin/: layout.tsx  page.tsx
front/src/app/cart/: page.tsx
front/src/app/catalog/: page.tsx
front/src/app/checkout/: page.tsx
front/src/app/contact/: page.tsx
front/src/app/orders/: page.tsx
front/src/app/privacy/: page.tsx
front/src/app/profile/: layout.tsx  page.tsx
front/src/entities/cart/: types.ts
front/src/entities/category/: admin-api.ts  api.ts
front/src/entities/order/: types.ts  utils.tsx
front/src/entities/product/: admin-api.ts  api.ts  apiClient.ts
front/src/entities/user/: admin-api.ts  index.ts  types.ts
front/src/features/auth/: AuthContext.tsx  model.ts
front/src/features/cart/: CartContext.tsx  useCart.ts
front/src/features/chat/: WebSocketContext.tsx  useWebSocket.ts
front/src/features/manage-favourites/: useFavourites.ts
front/src/features/notifications/: NotificationProvider.tsx  useNotificationToasts.ts
front/src/features/profile/: index.ts
front/src/shared/: index.ts
front/src/shared/api/: httpClient.ts  orvalInstance.ts
front/src/shared/config/: api.ts
front/src/shared/hooks/: useAsyncState.ts  useForm.ts  usePagination.ts  useTableState.ts
front/src/shared/lib/: QueryProvider.tsx  ThemeProvider.tsx  date-utils.ts  format.ts  logger.ts  navigation.ts  notifications.ts  storage.ts  utils.ts
front/src/shared/providers/: QueryProvider.tsx
front/src/shared/types/: common.ts
front/src/shared/ui/: BadgeIcon.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadMoreTrigger.tsx  Loading.tsx  Pagination.tsx  SearchInput.tsx  ThemeToggle.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  select.tsx  separator.tsx  table.tsx
front/src/widgets/ActiveFilters/: index.tsx
front/src/widgets/BottomNavBar/: index.tsx
front/src/widgets/CartPanel/: index.tsx
front/src/widgets/CatalogGrid/: InfiniteProductList.tsx  InfiniteProductListWithFilters.tsx  index.tsx
front/src/widgets/CatalogWithFilters/: index.tsx
front/src/widgets/ChatButton/: index.tsx
front/src/widgets/ChatWidget/: index.tsx
front/src/widgets/Footer/: index.tsx
front/src/widgets/Header/: index.tsx
front/src/widgets/NotificationPanel/: index.tsx
front/src/widgets/UnifiedCatalog/: index.tsx
front/src/widgets/orders/: index.ts
front/src/widgets/profile/: index.ts
md/: endpoints.md  postgres.md
prisma/: schema.prisma  seed.ts
src/: middleware.ts
src/app/: page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/(marketing)/: page.tsx
src/app/admin/: layout.tsx
src/app/checkout/: page.tsx
src/app/favourites/: page.tsx
src/app/orders/: page.tsx
src/app/profile/: layout.tsx
src/entities/category/: admin-api.ts  api.ts
src/entities/product/: admin-api.ts  api.ts  apiClient.ts
src/features/auth/: AuthContext.tsx  model.ts
src/features/cart/: CartContext.tsx
src/features/manage-favourites/: useFavourites.ts
src/shared/api/: supabaseBrowserClient.ts  supabaseClient.ts
src/shared/lib/: QueryProvider.tsx  useSession.ts  utils.ts
src/shared/ui/: BadgeIcon.tsx  SearchInput.tsx  ThemeToggle.tsx  separator.tsx
src/widgets/Breadcrumbs/: index.tsx
src/widgets/CartPanel/: index.tsx
src/widgets/CatalogGrid/: InfiniteProductList.tsx
src/widgets/Footer/: index.tsx
src/widgets/Header/: index.tsx
supabase/: config.toml
supabase/functions/checkout_create_order/: deno.json  index.ts
(+112 files in other folders)
