[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["reflaxess123 <reflaxess@yandex.ru>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "ERA",# eradicate
    "N",  # pep8-naming
    "ANN",# flake8-annotations
    "ASYNC", # flake8-async
    "PLE", # pylint
]
ignore = [
    "E501", # Line too long (handled by Black)
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN002", # Missing type annotation for args
    "ANN003", # Missing type annotation for kwargs
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env",
    ".ruff_cache",
    "migrations", # Alembic migrations
] 

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "." ]
